fixed cropped images

--- a/components/body/index.styl
+++ b/components/body/index.styl
@@ -139,8 +139,8 @@
       width 100%
       margin-top 0px
       height 65vw
-      background-size cover
-      background-position center center
+      background-size contain
+      background-position top center
       background-repeat no-repeat
       max-height 400px
 
